--- a/.github/workflows/spetclinic.yaml
+++ b/.github/workflows/spetclinic.yaml
@@ -1,7 +1,6 @@
 name: "spetclinic"
-
 on:
-  workflow_dispatch:  # Permet le déclenchement manuel
+  workflow_dispatch:
     inputs:
       environment:
         description: 'Environment to deploy to'
@@ -17,28 +16,21 @@ on:
         required: false
         default: false
         type: boolean
-
 jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     
     steps:
-      - name: Cleanup workspace
-        run: |
-          rm -rf ${{ github.workspace }}/*
-          rm -rf ${{ github.workspace }}/.??*
-        
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          repository: lsa26/spetclinic
           ref: main
           
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '17'  # Adjust version as needed
+          java-version: '17'
           distribution: 'temurin'
           
       - name: Cache Maven dependencies
@@ -48,16 +40,27 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
           
-      - name: Build project
+      - name: Apply code formatting
+        run: mvn spring-javaformat:apply
+          
+      - name: Build and test project
         run: |
           mvn -v
-          mvn spring-javaformat:apply
           if [ "${{ github.event.inputs.skip_tests }}" = "true" ]; then
             echo "Skipping tests as requested"
-            mvn -Dmaven.repo.local=~/.m2 -DskipTests=true -Dcheckstyle.skip=true package
+            mvn clean package -DskipTests=true -Dcheckstyle.skip=true
           else
-            mvn -Dmaven.repo.local=~/.m2 -DskipTests=true -Dcheckstyle.skip=true package
+            echo "Running tests"
+            mvn clean package -Dcheckstyle.skip=true
           fi
+          
+      - name: Upload build artifacts
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: spetclinic-${{ github.event.inputs.environment }}-${{ github.run_number }}
+          path: target/*.jar
+          retention-days: 30
           
       - name: Send failure notification
         if: failure()
@@ -70,24 +73,19 @@ jobs:
             "result": "FAILURE",
             "buildUrl": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
             "consoleUrl": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
-            "timestamp": "$(date '+%Y-%m-%d %H:%M:%S')",
+            "timestamp": "$(date -u '+%Y-%m-%d %H:%M:%S UTC')",
             "repository": "${{ github.repository }}",
             "branch": "${{ github.ref_name }}",
             "commit": "${{ github.sha }}",
             "trigger": "${{ github.event_name }}",
-            "environment": "${{ github.event.inputs.environment || 'auto' }}"
+            "environment": "${{ github.event.inputs.environment || 'dev' }}"
           }
           EOF
           )
-          
-          echo "Sending webhook payload: $payload"
           
           curl -X POST \
             -H "Content-Type: application/json" \
             -H "Accept: application/json" \
             --max-time 30 \
             --data "$payload" \
-            "${{secrets.N8N_URL}}" || {
-              echo "Webhook call failed, but continuing..."
-              exit 0
-            }
+            "${{ secrets.N8N_URL }}" || echo "Webhook notification failed (non-blocking)"
