--- a/pom.xml
+++ b/pom.xml
@@ -283,7 +283,7 @@
       <!-- Spring Boot Actuator displays sbom-related information if a CycloneDX SBOM file is
       present at the classpath -->
       <plugin>
-        <?m2e ignore?>
+        <!-- m2e ignore -->
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
       </plugin>
@@ -348,7 +348,7 @@
                 <goals>
                   <goal>unpack</goal>
                 </goals>
-                <?m2e execute onConfiguration,onIncremental?>
+                <!-- m2e execute onConfiguration,onIncremental -->
                 <phase>generate-resources</phase>
                 <configuration>
                   <artifactItems>
@@ -375,7 +375,7 @@
             </configuration>
             <executions>
               <execution>
-                <?m2e execute onConfiguration,onIncremental?>
+                <!-- m2e execute onConfiguration,onIncremental -->
                 <goals>
                   <goal>compile</goal>
                 </goals>
